correção sobre contatos

--- a/contact.html
+++ b/contact.html
@@ -10,9 +10,9 @@
     <h1>Sobre mim:</h1>
     <ul>
         <h2>Contatos:</h2>
-        <li><a href="jsamuelwolfgang@gmail.com">Email</a></li>
+        <li><a href="mailto:samuelwolfgang@gmail.com">Email</a></li>
         <p>Aqui você entrará em contato comigo pelo email.</p>
-        <li><a href="+5579991211426">Telefone</a></li>
+        <li><a href="tel:+5579991211426">Telefone</a></li>
         <p>Aqui você entrará em contato comigo pelo meu número de celular.</p>
     </ul>
     <a href="index.html">Página Inicial.</a>
